# Bangladesh_SmartGrid_STGT

./: .gitignore  Camera_Ready_Layout_Optimization_Report.md  Camera_Ready_Production_Report.md  Explainability_Audit_Report.md  Explainability_Integration_Report.md  Explainability_Publication_Mapping_Report.md  Explainability_Results_Report.md  Final_Explainability_Integration_Report.md  Final_Publication_Polishing_Report.md  LICENSE  Publication_Graphics_Enhancement_Report.md  Publication_Graphics_Implementation_Report.md  README.md  REPOSITORY_FOUNDATION_REPORT.md  aphics_Implementation.md.textClipping  environment.yml  pyproject.toml  requirements.txt
.tmp_overleaf_compare/: main.tex
ablation/: ablation_matrix.csv  ablation_plan.md  component_contribution_framework.md  statistical_significance_plan.md
architecture/: architecture_components.md  architecture_diagram.md  architecture_overview.md  explainability_design.md  input_output_specification.md  loss_function_design.md  module_rationale.md
checkpoints/: README.md
configs/: README.md  preprocessing_config.yaml
data/: README.md
docs/: README.md
error_analysis/: error_taxonomy.md  error_taxonomy_index.csv  extreme_event_framework.md  regional_error_framework.md  root_cause_analysis_protocol.md  stress_error_framework.md
evaluation/: ablation_evaluation_registry.csv  benchmark_comparison_plan.md  benchmark_registry.csv  evaluation_protocol.md  figure_and_table_plan.md  robustness_evaluation_plan.md  statistical_testing_plan.md
experiments/: README.md  benchmark_design.md  evaluation_protocol.md  (+3 more)
(+719 files in other folders)
